MAJOR UPDATE: Automation graph implemented